--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.1.0",
     "airtable": "^0.11.1",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "firebase": "^9.6.1",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
